fixed modal styling on mobile

--- a/client/src/components/InventoryModal/InventoryModal.scss
+++ b/client/src/components/InventoryModal/InventoryModal.scss
@@ -9,16 +9,26 @@
 }
 
 .modal-wrapper {
-    position: fixed;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+    @include tablet {
+        position: fixed;
+        top: 0;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
 }
 
 .inventoryModal {
+    
+    @media (max-width: 20rem) {
+        position: absolute;
+        top: 0;
+    }
+
     @include modal-window;
 
     &__header {
